--- a/config.json
+++ b/config.json
@@ -19,7 +19,7 @@
     "弹窗配置":{
         "开关":"开",
         "标题":"温馨提示",
-        "内容":"①:软件已经破解会员解锁无限看!<br>②:软件里面遇到的所有的广告<br>③:请不要相信都是虚假骗钱的!<br>④:尤其是什么赌博的和约泡的! !<br>⑤:谁他娘的信了就是个大傻逼!<br>⑥:你只管看视频享受生活就行。<br>⑦:别他娘的做大傻逼被人骗钱!<br>⑧:感谢各位一路陪伴感谢支持",
+        "内容":"①:已经破解会员解锁无限看!<br>②:软件里面遇到的所有的广告<br>③:请不要相信都是虚假骗钱的!<br>④:尤其是什么赌博的和约泡的! !<br>⑤:谁他娘的信了就是个大傻逼!<br>⑥:你只管看视频享受生活就行。<br>⑦:别他娘的做大傻逼被人骗钱!<br>⑧:感谢各位一路陪伴感谢支持",
         "可取消":"否",
         "按钮1标题":"更多软件",
         "按钮2标题":"官方QQ群",
