--- a/config.json
+++ b/config.json
@@ -19,7 +19,7 @@
     "弹窗配置":{
         "开关":"开",
         "标题":"温馨提示",
-        "内容":"①:已经破解会员解锁无限看!<br>②:软件里面遇到的所有的广告<br>③:请不要相信都是虚假骗钱的!<br>④:尤其是什么赌博的和约泡的! !<br>⑤:谁他娘的信了就是个大傻逼!<br>⑥:你只管看视频享受生活就行。<br>⑦:别他娘的做大傻逼被人骗钱!<br>⑧:感谢各位一路陪伴感谢支持",
+        "内容":"①:软件已经破解会员解锁无限看!<br>②:软件里面遇到的所有的广告<br>③:请不要相信都是虚假骗钱的!<br>④:尤其是什么赌博的和约泡的! !<br>⑤:谁他娘的信了就是个大傻逼!<br>⑥:你只管看视频享受生活就行。<br>⑦:别他娘的做大傻逼被人骗钱!<br>⑧:感谢各位一路陪伴感谢支持",
         "可取消":"否",
         "按钮1标题":"更多软件",
         "按钮2标题":"官方QQ群",
@@ -29,13 +29,13 @@
         "按钮3事件":"取消"
     },
     "任务弹窗配置":{
-        "开关":"关",
+        "开关":"开",
         "重复任务":"开",
         "任务延次":0,
-        "任务标题":"8.11号点查看教程获取密码!",
-        "任务内容":"<font color=red>为了防止软件过快的和谐<br>请大家使用密码解锁<br>点击右边的查看教程<br>密码简单谁都能找到<br>温馨提示密码俩个字<br>点击教程打不开的话<br>请大家把默认跳转的<br>浏览器改成手机自带的</font>",
-        "任务教程":"https://kzurl20.cn/7zgyVI",
-        "任务答案":"备注"
+        "任务标题":"9.11号点查看教程获取密码!",
+        "任务内容":"<font color=red>为了防止软件过快的和谐<br>请大家使用密码解锁<br>点击右边的查看教程<br>密码简单谁都能找到<br>温馨提示密码三个字<br>点击教程打不开的话<br>请大家把默认跳转的<br>浏览器改成手机自带的</font>",
+        "任务教程":"https://kurl11.cn/75vy2B",
+        "任务答案":"赚不停"
     },
     "分享配置":{
         "分享开关":"关",
