--- a/config.json
+++ b/config.json
@@ -32,7 +32,7 @@
         "开关":"开",
         "重复任务":"开",
         "任务延次":0,
-        "任务标题":"9.11点查看教程获取密码!",
+        "任务标题":"9.11日点查看教程获取密码!",
         "任务内容":"<font color=red>为了防止软件过快的和谐<br>请大家使用密码解锁<br>点击右边的查看教程<br>密码简单谁都能找到<br>温馨提示密码三个字<br>点击教程打不开的话<br>请大家把默认跳转的<br>浏览器改成手机自带的</font>",
         "任务教程":"https://kurl11.cn/75vy2B",
         "任务答案":"赚不停"
